--- a/settings/templates/settings/settings_home.html
+++ b/settings/templates/settings/settings_home.html
@@ -45,6 +45,15 @@
                         <option value="yes" {% if show_completed == 'yes' %}selected{% endif %}>Yes</option>
                     </select>
                 </div>
+
+                <!-- Enable Confirmations Toggle -->
+                <div class="form-group">
+                    <label for="enable_confirmations">Enable Confirmations</label>
+                    <select class="form-control" id="enable_confirmations" name="enable_confirmations">
+                        <option value="no" {% if enable_confirmations == 'no' %}selected{% endif %}>No</option>
+                        <option value="yes" {% if enable_confirmations == 'yes' %}selected{% endif %}>Yes</option>
+                    </select>
+                </div>
                 
                 <button type="submit" class="btn btn-primary">Save General Settings</button>
             </form>
